--- a/sass/partials/_card.scss
+++ b/sass/partials/_card.scss
@@ -32,6 +32,16 @@
         position: fixed;
         transition: all 0.5s;
         bottom: calc(-58vh + 160px);
+        
+        &.small{
+            height: 45vh;
+            bottom: calc(-45vh + 160px);
+        }
+        
+        &.large{
+            height: 75vh;
+            bottom: calc(-75vh + 160px);
+        }
 
         .bmd-form-group{
            padding: 0; 
@@ -113,6 +123,24 @@
             .radio label{
                 font-size: 15px !important;
                 color: #000000;
+                
+                &.full{
+                    width: 100%;
+                    text-align: right;
+                    font-size: 20px !important;
+                    padding: 5px 30px;
+                    margin-bottom: -1px;
+                    
+                    input{
+                        float: left;
+                    }
+                    
+                    .bmd-radio{
+                        float: left;
+                        left: 0;
+                        margin-top: 2px;
+                    }
+                }
              }
         }
         
