--- a/sass/pages/_step1.scss
+++ b/sass/pages/_step1.scss
@@ -34,7 +34,16 @@
                 z-index: 1;
                 opacity: 0;
                 visibility: hidden;
-                transition: all 0.5s;
+                transition: all 0.3s;
+            }
+            
+            &.is-focused{
+                &:before{
+                     bottom: 10px;
+                     opacity: 1;
+                     visibility: visible;
+                     transition: all 0.3s;
+                }
             }
         }
         
@@ -44,15 +53,6 @@
                 opacity: 1;
                 visibility: visible;
                 transition: all 0.5s;
-            }
-
-            .input-container{
-                 &:before{
-                     bottom: 10px;
-                     opacity: 1;
-                     visibility: visible;
-                     transition: all 0.5s;
-                }
             }
         }
 
